# pathseq

./: .gitignore  .readthedocs.yml  LICENSE.rst  README.rst  pyproject.toml  tox.ini
.github.disabled/workflows/: main.yml  release.yml
.github/workflows/: main.yml  release.yml
doc/source/: api.rst  conf.py  conftest.py  contributor.rst  format.rst  index.rst  quickstart.rst
doc/source/_static/: ends_name_breakdown.pikchr  format.pikchr  inheritance.pikchr  kroki_lists.css  loose_name_breakdown.pikchr  multi_range_breakdown.pikchr  name.pikchr  name_breakdown.pikchr  range_ends_format.pikchr  range_in_format.pikchr  range_starts_format.pikchr  range_string_breakdown.pikchr  solid_image_background.css  starts_name_breakdown.pikchr
doc/source/decisions/: 000-decision-record-template.rst  001-path-sequence-format.rst  002-directory-sequence-support.rst  003-path-sequence-inherits-from-set.rst  index.rst
doc/source/reference/: format.pikchr  format.rst  index.rst
doc/source/user/: convert.rst  format.rst  index.rst  pathlib.rst
src/pathseq/: __init__.py  _arithmetic_sequence.py  _base.py  _decimal_range.py  _error.py  _file_num_seq.py  _file_num_set.py  _formatter.py  _from_disk.py  _loose_path_sequence.py  _loose_pure_path_sequence.py  _parse_file_num_seq.py  _parse_file_num_set.py  _parse_loose_path_sequence.py  _parse_path_sequence.py  _path_sequence.py  _pure_path_sequence.py  _type.py  convert.py  util.py
src/pathseq/_ast/: __init__.py  _base.py  _formatter.py  _loose_type.py  _ranges.py  _type.py  _util.py
src/pathseq/_file_num_seq/: __init__.py  _arithmetic_sequence.py  _decimal_range.py  _file_num_seq.py  _parse_file_num_seq.py
src/pathseq/_parsing/: __init__.py  _error.py  _file_num_set.py  _path_sequence.py
tests/: conftest.py  test_decimal_range.py  test_file_num_seq.py  test_file_num_set.py  test_loose_parsing.py  test_loose_path.py  test_loose_pure_path.py  test_parsing.py  test_path.py  test_pure_path.py
