[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pathseq"
authors = [
    {name = "Ashley Whetter", email = "ashley@awhetter.co.uk"},
]
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dynamic = ["version", "description"]
dependencies = [
]

[project.urls]
Source = "https://github.com/AWhetter/pathseq"
Documentation = "https://pathseq.readthedocs.org"

[tool.pylint]
disable = "R,unused-argument"

[tool.towncrier]
directory = "doc/changes"
filename = "CHANGELOG.rst"
package = "pathseq"
title_format = "pathseq v{version} ({project_date})"
